June 2024 Samples Update 2
Administrative update: Remove nonfunctional email addresses and web sites.

--- a/Samples/Win7Samples/netds/peertopeer/samples.htm
+++ b/Samples/Win7Samples/netds/peertopeer/samples.htm
@@ -185,12 +185,11 @@ Sample</a></p>
 
 <p class=MsoNormal> Tip: To enable the Peer to Peer Networking components on XP follow the guidelines at <a href="http://www.microsoft.com/technet/network/p2p/p2pintro.mspx">http://www.microsoft.com/technet/network/p2p/p2pintro.mspx</a>. </p>
 
-<p> If you have any questions or feedback, please contact us using any of the mechanisms below: </p>
+<p> Other resources: </p>
 
-<p>Email: <a href="mailto:peerfb@microsoft.com">peerfb@microsoft.com</a> <br>
+<p>
 Website: <a href="http://www.microsoft.com/p2p">http://www.microsoft.com/p2p</a> <br>
 Blog: <a href="http://blogs.msdn.com/p2p/">http://blogs.msdn.com/p2p/</a> <br>
-MSDN Forum: <a href="http://forums.microsoft.com/msdn/showforum.aspx?forumid=1505&amp;siteid=1">http://forums.microsoft.com/msdn/showforum.aspx?forumid=1505&siteid=1</a>
 </p>
 
 <div class=MsoNormal align=center style='text-align:center'>
